       the base class.
     - Fixed overflow in slider grip position calculations.
     - Slider grip moves one page width/height when the gutter is clicked.
     - Scrollbar buttons default to adjusting grip value by 1.
     - Gadget::addGadget() checks to see if new children want to steal the focus
       and will grant it if necessary.
  
  - New Features:
     - ListBox rewritten to be a single gadget instead of a compound gadget.
     - ListBox allows multiple selection.
     - Added extra flags to AmigaWindow and SkinnedWindow classes allowing close
       and depth gadgets to be hidden when gadgets are constructed.
     - AmigaWindow allows depth and close buttons to be shown/hidden at will.
     - SkinnedWindow allows depth and close buttons to be shown/hidden at will.
     - Screen constructor accepts flags parameter.
     - AmigaScreen constructor accepts flags parameter.
     - SkinnedScreen constructor accepts flags parameter.
     - AmigaScreen allows depth and flip buttons to be shown/hidden at will.
     - SkinnedScreen allows depth and flip buttons to be shown/hidden at will.
     - Added ScrollingListBox class.
     - Added DefaultStyle class for control over gadget default colours.
     - Added DimmedScreen class to the bonus folder.
     - Added Requester class.
     - Added FileRequester class to the bonus folder.
     - Added Window and Screen setTitle() methods.
     - Added drawEllipse() to the SuperBitmap class.
     - Added drawFilledEllipse() to the SuperBitmap class.
     - Added ListData class.
     - Added FilePath class to bonus folder
     - Added gadget test screen to demo.

  V0.32 (200804327)
  
  - Fixes:
     - Moved abstract methods out of FontBase not needed by all fonts.
     - Renamed "checkGlyphData()" in font classes to "isCharBlank()".
     - Moved more code out of FontBase into FixedWidthFontBase.
     - Changed FontBase::clearColour() to support Jeff's new font classes.